syntax = "proto3";

package file;

option go_package = "./pb";

message Order {
  int64 user_id = 1;
  int64 order_id = 2;
  string username = 3;
  int64 product_id = 4;
  int64 quantity = 5;
  string order_date = 6;
}

message ListOrdersRequest {
  int64 user_id = 1;
};
message ListOrdersResponse {
  repeated Order Orders = 1;
}

service OrdersService {
  rpc ListOrders(ListOrdersRequest) returns (stream ListOrdersResponse);
}
